objects/Campaign.object
<CustomObject>
    <sharingModel>FullAccess</sharingModel>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Floater__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Floater</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Community</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assign_Original_Owner_as_Floater__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Original Owner as Floater</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>